goldarn fuzzer
Signed-off-by: Justin Florentine <justin+github@florentine.us>